objects/Production_Changes__c.object
<CustomObject>
    <fields>
        <fullName>API_Name__c</fullName>
        <label>API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_Method__c</fullName>
        <label>Deployment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Change Set</fullName>
                </value>
                <value>
                    <fullName>Force.com IDE</fullName>
                </value>
                <value>
                    <fullName>ANT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_Notes__c</fullName>
        <label>Production Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apex Class</fullName>
                </value>
                <value>
                    <fullName>Apex Trigger</fullName>
                </value>
                <value>
                    <fullName>App</fullName>
                </value>
                <value>
                    <fullName>Custom Field</fullName>
                </value>
                <value>
                    <fullName>Custom Object</fullName>
                </value>
                <value>
                    <fullName>Custom Report Type</fullName>
                </value>
                <value>
                    <fullName>Folder</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Page layout</fullName>
                </value>
                <value>
                    <fullName>Permission Set</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Record Type</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                </value>
                <value>
                    <fullName>Tab</fullName>
                </value>
                <value>
                    <fullName>Validation Rule</fullName>
                </value>
                <value>
                    <fullName>Visualforce Component</fullName>
                </value>
                <value>
                    <fullName>Visualforce Page</fullName>
                </value>
                <value>
                    <fullName>Workflow Rule</fullName>
                </value>
                <value>
                    <fullName>Workflow Email alert</fullName>
                </value>
                <value>
                    <fullName>Workflow Field update</fullName>
                </value>
                <value>
                    <fullName>Workflow Task Creation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>User Story</label>
        <referenceTo>User_Stories__c</referenceTo>
        <relationshipLabel>Production Changes</relationshipLabel>
        <relationshipName>Production_Changes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Production Change</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Production Change Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Production Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>